[gd_scene load_steps=29 format=3 uid="uid://bxwd4fqdgusum"]

[ext_resource type="Script" path="res://World/Levels/world.gd" id="1_wvfhm"]
[ext_resource type="PackedScene" uid="uid://c7kn0geb5j34y" path="res://Entities/Mobs/ShadowFigure/NewZombie.tscn" id="2_r24d2"]
[ext_resource type="Texture2D" uid="uid://b7onuy3fl1edh" path="res://4k JPEG/Grass 03/Grass03_BaseColor.jpg" id="3_40vnh"]
[ext_resource type="PackedScene" uid="uid://dp1b2cr4awrn4" path="res://Entities/Guns/Glock.tscn" id="4_quxm6"]
[ext_resource type="Texture2D" uid="uid://dxl3c2e3yfdej" path="res://4k JPEG/Grass 03/Grass03_Ambient Occlusion.jpg" id="4_ywfrw"]
[ext_resource type="Texture2D" uid="uid://ckb0jr17nlkg7" path="res://4k JPEG/Grass 03/Grass03_Height.jpg" id="5_cu8wd"]
[ext_resource type="Script" path="res://World/Objects/EnemySpawn.gd" id="5_uyrs5"]
[ext_resource type="Texture2D" uid="uid://cc6hlrrso08um" path="res://4k JPEG/Grass 03/Grass03_Metallic.jpg" id="6_i00c0"]
[ext_resource type="PackedScene" uid="uid://cv80nethatnrh" path="res://World/Objects/Shop.tscn" id="6_v28op"]
[ext_resource type="PackedScene" uid="uid://cvepirpjtcf77" path="res://Entities/Guns/M4A1OLD.tscn" id="7_c32lw"]
[ext_resource type="Texture2D" uid="uid://bgf2kn26p5ojl" path="res://4k JPEG/Grass 03/Grass03_Normal.jpg" id="7_h0x3e"]
[ext_resource type="Texture2D" uid="uid://csr24sly3m3x5" path="res://4k JPEG/Grass 03/Grass03_Roughness.jpg" id="8_7xu7w"]

[sub_resource type="Environment" id="Environment_67o5g"]
fog_enabled = true
fog_light_color = Color(0, 0, 0, 1)
fog_density = 0.145

[sub_resource type="NavigationMesh" id="NavigationMesh_kid4w"]
vertices = PackedVector3Array(-14.8433, 0.344791, -31.0113, -25.3433, 0.344791, -31.0113, -25.3433, 0.344791, -19.2613, -25.3433, 0.344791, -7.2613, -5.8433, 0.344791, -7.2613, -4.3433, 0.344791, -7.5113, -4.3433, 0.344791, -31.0113, -14.8433, 0.344791, -31.0113, -25.3433, 0.344791, -19.2613, 25.4067, 0.344791, -24.7613, 25.4067, 0.344791, -31.0113, 17.9067, 0.344791, -31.0113, 25.4067, 0.344791, -18.5113, 25.4067, 0.344791, -24.7613, 17.9067, 0.344791, -31.0113, 25.4067, 0.344791, -18.5113, 17.9067, 0.344791, -31.0113, 10.4067, 0.344791, -31.0113, 25.4067, 0.344791, -12.2613, -4.3433, 0.344791, -31.0113, -4.3433, 0.344791, -7.5113, -2.8433, 0.344791, -7.5113, 2.9067, 0.344791, -31.0113, 2.9067, 0.344791, -31.0113, -2.8433, 0.344791, -7.5113, -2.5933, 0.344791, -6.0113, 25.4067, 0.344791, -6.0113, 25.4067, 0.344791, -12.2613, 10.4067, 0.344791, -31.0113, -15.5933, 0.144791, -30.2613, -25.0933, 0.144791, -30.2613, -25.0933, 0.144791, -24.2613, -15.5933, 0.144791, -30.2613, -25.0933, 0.144791, -24.2613, -25.0933, 0.144791, -18.0113, -25.0933, 0.144791, -5.7613, -7.3433, 0.144791, -5.7613, -7.3433, 0.144791, -7.2613, -25.0933, 0.144791, -12.0113, -25.0933, 0.144791, -12.0113, -7.3433, 0.144791, -7.2613, -5.5933, 0.144791, -7.5113, -5.8433, 0.144791, -30.2613, -15.5933, 0.144791, -30.2613, -25.0933, 0.144791, -18.0113, -5.5933, 0.144791, -7.5113, -4.0933, 0.144791, -7.5113, -3.8433, 0.144791, -30.2613, -5.8433, 0.144791, -30.2613, 25.1567, 0.144791, -24.2613, 25.1567, 0.144791, -30.2613, 17.9067, 0.144791, -30.2613, 25.1567, 0.144791, -18.0113, 25.1567, 0.144791, -24.2613, 17.9067, 0.144791, -30.2613, 25.1567, 0.144791, -18.0113, 17.9067, 0.144791, -30.2613, 10.6567, 0.144791, -30.2613, 25.1567, 0.144791, -12.0113, -3.8433, 0.144791, -30.2613, -4.0933, 0.144791, -7.5113, -2.5933, 0.144791, -7.5113, 3.4067, 0.144791, -30.2613, 3.4067, 0.144791, -30.2613, -2.5933, 0.144791, -7.5113, -2.3433, 0.144791, -5.7613, 25.1567, 0.144791, -5.7613, 25.1567, 0.144791, -12.0113, 10.6567, 0.144791, -30.2613, -5.0933, 0.344791, -2.7613, -5.0933, 0.344791, -4.2613, -5.8433, 0.344791, -4.2613, -5.8433, 0.344791, -2.5113, -5.0933, 0.344791, -2.7613, -5.8433, 0.344791, -4.2613, -25.3433, 0.344791, -7.2613, -5.8433, 0.544791, -5.2613, -3.5933, 1.24479, -5.2613, -3.5933, 1.24479, -6.5113, -5.8433, 0.544791, -6.5113, -25.3433, 0.344791, 3.4887, -5.8433, 0.344791, 3.4887, -5.8433, 0.344791, -2.5113, -25.3433, 0.344791, -7.2613, -5.8433, 0.544791, -6.5113, -5.8433, 0.344791, -7.2613, -25.3433, 0.344791, -7.2613, -7.23616, 0.344791, -6.56487, -5.8433, 0.544791, -5.2613, -5.8433, 0.544791, -6.5113, -25.3433, 0.344791, -7.2613, -7.23616, 0.344791, -5.40416, -7.23616, 0.344791, -6.56487, -5.8433, 0.344791, -4.2613, -5.8433, 0.544791, -5.2613, -25.3433, 0.344791, -7.2613, -7.23616, 0.344791, -5.40416, -5.8433, 0.144791, -6.2613, -5.8433, 0.144791, -5.5113, -3.8433, 0.144791, -5.5113, -3.8433, 0.144791, -6.2613, -5.0933, 0.344791, -6.2613, -5.0933, 0.344791, -5.5113, -3.8433, 0.144791, -5.5113, -3.8433, 0.144791, -6.2613, -5.0933, 0.344791, -4.2613, -5.0933, 0.344791, -2.7613, -4.3433, 0.344791, -2.5113, -2.8433, 0.344791, -4.2613, 25.4067, 0.344791, -6.0113, -2.5933, 0.344791, -6.0113, -2.8433, 0.344791, -4.2613, -2.8433, 0.344791, -4.2613, -4.3433, 0.344791, -2.5113, -4.3433, 0.344791, 2.2387, 25.4067, 0.344791, 2.4887, 25.4067, 0.344791, -6.0113, -25.0933, 0.144791, 21.2387, -25.0933, 0.144791, 30.4887, -14.5933, 0.144791, 30.4887, -7.0933, 0.144791, -4.2613, -7.3433, 0.144791, -5.7613, -25.0933, 0.144791, -5.7613, -25.0933, 0.144791, 3.2387, -4.0933, 0.144791, -4.2613, -7.0933, 0.144791, -4.2613, -25.0933, 0.144791, 3.2387, -25.0933, 0.144791, 12.2387, -14.5933, 0.144791, 30.4887, -3.8433, 0.144791, 30.4887, -25.0933, 0.144791, 12.2387, -25.0933, 0.144791, 21.2387, -14.5933, 0.144791, 30.4887, 17.9067, 0.144791, 30.4887, 25.1567, 0.144791, 30.4887, 25.1567, 0.144791, 21.2387, 10.6567, 0.144791, 30.4887, 17.9067, 0.144791, 30.4887, 25.1567, 0.144791, 21.2387, 10.6567, 0.144791, 30.4887, 25.1567, 0.144791, 21.2387, 25.1567, 0.144791, 12.2387, 3.4067, 0.144791, 30.4887, 25.1567, 0.144791, -5.7613, -2.3433, 0.144791, -5.7613, -2.5933, 0.144791, -4.2613, 25.1567, 0.144791, 3.2387, 25.1567, 0.144791, 3.2387, -2.5933, 0.144791, -4.2613, -4.0933, 0.144791, -4.2613, -3.8433, 0.144791, 30.4887, 3.4067, 0.144791, 30.4887, 25.1567, 0.144791, 12.2387, 17.6567, 0.344791, 30.9887, 25.4067, 0.344791, 30.9887, 25.4067, 0.344791, 23.7387, 17.6567, 0.344791, 30.9887, 25.4067, 0.344791, 23.7387, 25.4067, 0.344791, 16.7387, 10.1567, 0.344791, 30.9887, 17.6567, 0.344791, 30.9887, 25.4067, 0.344791, 16.7387, 25.4067, 0.344791, 9.4887, -4.3433, 0.344791, 2.2387, -4.3433, 0.344791, 3.7387, 2.4067, 0.344791, 30.9887, 10.1567, 0.344791, 30.9887, 25.4067, 0.344791, 9.4887, 25.4067, 0.344791, 2.4887, -4.3433, 0.344791, 3.7387, -5.0933, 0.344791, 3.9887, -5.0933, 0.344791, 30.9887, 2.4067, 0.344791, 30.9887, -25.3433, 0.344791, 23.9887, -25.3433, 0.344791, 30.9887, -15.3433, 0.344791, 30.9887, -25.3433, 0.344791, 17.2387, -25.3433, 0.344791, 23.9887, -15.3433, 0.344791, 30.9887, -5.0933, 0.344791, 3.9887, -5.8433, 0.344791, 3.4887, -25.3433, 0.344791, 3.4887, -25.3433, 0.344791, 10.2387, -25.3433, 0.344791, 10.2387, -25.3433, 0.344791, 17.2387, -15.3433, 0.344791, 30.9887, -5.0933, 0.344791, 30.9887, -5.0933, 0.344791, 3.9887)
polygons = [PackedInt32Array(2, 1, 0), PackedInt32Array(4, 3, 5), PackedInt32Array(5, 3, 8), PackedInt32Array(5, 8, 7), PackedInt32Array(5, 7, 6), PackedInt32Array(11, 10, 9), PackedInt32Array(14, 13, 12), PackedInt32Array(15, 18, 16), PackedInt32Array(16, 18, 17), PackedInt32Array(20, 19, 21), PackedInt32Array(21, 19, 22), PackedInt32Array(24, 23, 25), PackedInt32Array(25, 23, 28), PackedInt32Array(25, 28, 27), PackedInt32Array(25, 27, 26), PackedInt32Array(31, 30, 29), PackedInt32Array(34, 33, 32), PackedInt32Array(36, 35, 37), PackedInt32Array(37, 35, 38), PackedInt32Array(40, 39, 41), PackedInt32Array(41, 39, 44), PackedInt32Array(41, 44, 43), PackedInt32Array(41, 43, 42), PackedInt32Array(45, 48, 46), PackedInt32Array(46, 48, 47), PackedInt32Array(51, 50, 49), PackedInt32Array(54, 53, 52), PackedInt32Array(55, 58, 56), PackedInt32Array(56, 58, 57), PackedInt32Array(60, 59, 61), PackedInt32Array(61, 59, 62), PackedInt32Array(64, 63, 65), PackedInt32Array(65, 63, 68), PackedInt32Array(65, 68, 67), PackedInt32Array(65, 67, 66), PackedInt32Array(71, 70, 69), PackedInt32Array(73, 72, 74), PackedInt32Array(74, 72, 75), PackedInt32Array(79, 78, 76), PackedInt32Array(76, 78, 77), PackedInt32Array(81, 80, 82), PackedInt32Array(82, 80, 83), PackedInt32Array(84, 87, 85), PackedInt32Array(85, 87, 86), PackedInt32Array(88, 91, 89), PackedInt32Array(89, 91, 92), PackedInt32Array(92, 91, 90), PackedInt32Array(94, 93, 96), PackedInt32Array(96, 93, 95), PackedInt32Array(100, 99, 97), PackedInt32Array(97, 99, 98), PackedInt32Array(104, 103, 101), PackedInt32Array(101, 103, 102), PackedInt32Array(106, 105, 107), PackedInt32Array(107, 105, 108), PackedInt32Array(111, 110, 109), PackedInt32Array(113, 112, 114), PackedInt32Array(114, 112, 115), PackedInt32Array(115, 112, 116), PackedInt32Array(119, 118, 117), PackedInt32Array(121, 120, 122), PackedInt32Array(122, 120, 123), PackedInt32Array(125, 124, 126), PackedInt32Array(126, 124, 127), PackedInt32Array(127, 124, 128), PackedInt32Array(128, 124, 129), PackedInt32Array(131, 130, 132), PackedInt32Array(135, 134, 133), PackedInt32Array(138, 137, 136), PackedInt32Array(139, 142, 140), PackedInt32Array(140, 142, 141), PackedInt32Array(144, 143, 145), PackedInt32Array(145, 143, 146), PackedInt32Array(148, 147, 149), PackedInt32Array(149, 147, 152), PackedInt32Array(149, 152, 151), PackedInt32Array(149, 151, 150), PackedInt32Array(155, 154, 153), PackedInt32Array(157, 156, 158), PackedInt32Array(160, 159, 161), PackedInt32Array(161, 159, 162), PackedInt32Array(164, 163, 165), PackedInt32Array(165, 163, 166), PackedInt32Array(166, 163, 167), PackedInt32Array(167, 163, 168), PackedInt32Array(170, 169, 171), PackedInt32Array(171, 169, 172), PackedInt32Array(175, 174, 173), PackedInt32Array(178, 177, 176), PackedInt32Array(180, 179, 181), PackedInt32Array(181, 179, 182), PackedInt32Array(184, 183, 185), PackedInt32Array(185, 183, 186), PackedInt32Array(186, 183, 187)]
geometry_parsed_geometry_type = 2
cell_height = 0.1
agent_height = 0.1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mt7ec"]
diffuse_mode = 3
specular_mode = 1
albedo_texture = ExtResource("3_40vnh")
metallic = 1.0
metallic_texture = ExtResource("6_i00c0")
roughness_texture = ExtResource("8_7xu7w")
normal_enabled = true
normal_texture = ExtResource("7_h0x3e")
ao_enabled = true
ao_texture = ExtResource("4_ywfrw")
heightmap_enabled = true
heightmap_texture = ExtResource("5_cu8wd")
uv1_scale = Vector3(15.735, 15.735, 15.735)

[sub_resource type="PlaneMesh" id="PlaneMesh_gu1br"]
material = SubResource("StandardMaterial3D_mt7ec")

[sub_resource type="BoxShape3D" id="BoxShape3D_cr8ni"]
size = Vector3(51.5794, 0.316145, 62.001)

[sub_resource type="BoxMesh" id="BoxMesh_c5adm"]

[sub_resource type="BoxShape3D" id="BoxShape3D_q3gsa"]
size = Vector3(4, 1, 2)

[sub_resource type="BoxShape3D" id="BoxShape3D_3n4c8"]
size = Vector3(0.222491, 4.90906, 5.29535)

[sub_resource type="BoxMesh" id="BoxMesh_ee5mt"]

[sub_resource type="SphereMesh" id="SphereMesh_oj01q"]

[sub_resource type="SphereShape3D" id="SphereShape3D_s0k6y"]

[sub_resource type="SphereMesh" id="SphereMesh_ewvcw"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hahd6"]
transparency = 1
albedo_color = Color(1, 0, 0, 0.588235)

[sub_resource type="BoxMesh" id="BoxMesh_jjsc3"]
material = SubResource("StandardMaterial3D_hahd6")
size = Vector3(1, 50, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_dv1m0"]
size = Vector3(1.5, 3, 1.5)

[sub_resource type="SphereShape3D" id="SphereShape3D_hod27"]
radius = 0.99306

[node name="World" type="Node3D"]
script = ExtResource("1_wvfhm")
zombie = ExtResource("2_r24d2")
EnemiesToggle = true
spawnSpeed = 2.0
spawnAmount = 5
spawnedEnemies = 1

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_67o5g")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.509071, 0.860724, 0, -0.860724, 0.509071, 0, 15.565, 15.7367)

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="."]
navigation_mesh = SubResource("NavigationMesh_kid4w")

[node name="StaticBody3D" type="StaticBody3D" parent="NavigationRegion3D"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="NavigationRegion3D/StaticBody3D"]
transform = Transform3D(25.8433, 0, 0, 0, 1, 0, 0, 0, 31.5113, 0, 0, 0)
mesh = SubResource("PlaneMesh_gu1br")
skeleton = NodePath("../CollisionShape3D")

[node name="CollisionShape3D" type="CollisionShape3D" parent="NavigationRegion3D/StaticBody3D"]
shape = SubResource("BoxShape3D_cr8ni")

[node name="StaticBody3D2" type="StaticBody3D" parent="NavigationRegion3D"]
transform = Transform3D(0.957566, -0.288213, 0, 0.288213, 0.957566, 0, 0, 0, 1, -5.11957, 0, -5.76923)

[node name="MeshInstance3D" type="MeshInstance3D" parent="NavigationRegion3D/StaticBody3D2"]
transform = Transform3D(4, 0, 0, 0, 1, 0, 0, 0, 2, 0, 0, 0)
mesh = SubResource("BoxMesh_c5adm")

[node name="CollisionShape3D" type="CollisionShape3D" parent="NavigationRegion3D/StaticBody3D2"]
shape = SubResource("BoxShape3D_q3gsa")

[node name="StaticBody3D3" type="StaticBody3D" parent="NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 2.6126, 0.602023)

[node name="CollisionShape3D" type="CollisionShape3D" parent="NavigationRegion3D/StaticBody3D3"]
shape = SubResource("BoxShape3D_3n4c8")

[node name="MeshInstance3D" type="MeshInstance3D" parent="NavigationRegion3D/StaticBody3D3"]
transform = Transform3D(0.222, 0, 0, 0, 4.909, 0, 0, 0, 5.295, 0, 0, 0)
mesh = SubResource("BoxMesh_ee5mt")

[node name="PlayerSpawn" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.37928, 0.279157, 2.64243)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -25.164, 19.5198, 14.5943)

[node name="Node3D" type="Node3D" parent="."]
transform = Transform3D(0.82374, 0.566967, 0, -0.566967, 0.82374, 0, 0, 0, 1, 0.69844, 2.32603, -3.17581)

[node name="M4A1" parent="Node3D" instance=ExtResource("7_c32lw")]

[node name="Node3D4" type="Node3D" parent="."]
transform = Transform3D(0.342332, 0.939579, 0, -0.939579, 0.342332, 0, 0, 0, 1, -2.98299, 1.87731, -6.76015)

[node name="Glock" parent="Node3D4" instance=ExtResource("4_quxm6")]
visible = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.80314, -2.66664)
mesh = SubResource("SphereMesh_oj01q")

[node name="CharacterBody3D" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.800208, -0.599722, 0, 0.599722, 0.800208, 0, 1.65196, 2.0357)

[node name="CollisionShape3D" type="CollisionShape3D" parent="CharacterBody3D"]
shape = SubResource("SphereShape3D_s0k6y")

[node name="MeshInstance3D" type="MeshInstance3D" parent="CharacterBody3D/CollisionShape3D"]
mesh = SubResource("SphereMesh_ewvcw")

[node name="ZombieSpawns" type="Marker3D" parent="."]

[node name="Spawn 1" type="Marker3D" parent="ZombieSpawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13.399, 0, -21.548)
script = ExtResource("5_uyrs5")

[node name="MeshInstance3D" type="MeshInstance3D" parent="ZombieSpawns/Spawn 1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 25, 0)
mesh = SubResource("BoxMesh_jjsc3")

[node name="Area3D" type="Area3D" parent="ZombieSpawns/Spawn 1"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="ZombieSpawns/Spawn 1/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
shape = SubResource("BoxShape3D_dv1m0")

[node name="Spawn 2" type="Marker3D" parent="ZombieSpawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15.5009, 0, -16.8628)
script = ExtResource("5_uyrs5")

[node name="MeshInstance3D" type="MeshInstance3D" parent="ZombieSpawns/Spawn 2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 25, 0)
mesh = SubResource("BoxMesh_jjsc3")

[node name="Area3D" type="Area3D" parent="ZombieSpawns/Spawn 2"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="ZombieSpawns/Spawn 2/Area3D"]
shape = SubResource("SphereShape3D_hod27")

[node name="Spawn 3" type="Marker3D" parent="ZombieSpawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 14.7916, 0, 4.42349)
script = ExtResource("5_uyrs5")

[node name="MeshInstance3D" type="MeshInstance3D" parent="ZombieSpawns/Spawn 3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 25, 0)
mesh = SubResource("BoxMesh_jjsc3")

[node name="Area3D" type="Area3D" parent="ZombieSpawns/Spawn 3"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="ZombieSpawns/Spawn 3/Area3D"]
shape = SubResource("SphereShape3D_hod27")

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="ItemBuy" parent="." instance=ExtResource("6_v28op")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.88875, 1.18151, 2.16172)
Item = ExtResource("7_c32lw")

[node name="ItemBuy2" parent="." instance=ExtResource("6_v28op")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.88875, 1.22266, -0.549064)
Item = ExtResource("4_quxm6")
InitialCost = 150

[connection signal="body_entered" from="ZombieSpawns/Spawn 1/Area3D" to="ZombieSpawns/Spawn 1" method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="ZombieSpawns/Spawn 1/Area3D" to="ZombieSpawns/Spawn 1" method="_on_area_3d_body_exited"]
[connection signal="body_entered" from="ZombieSpawns/Spawn 2/Area3D" to="ZombieSpawns/Spawn 2" method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="ZombieSpawns/Spawn 2/Area3D" to="ZombieSpawns/Spawn 2" method="_on_area_3d_body_exited"]
[connection signal="body_entered" from="ZombieSpawns/Spawn 3/Area3D" to="ZombieSpawns/Spawn 3" method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="ZombieSpawns/Spawn 3/Area3D" to="ZombieSpawns/Spawn 3" method="_on_area_3d_body_exited"]
[connection signal="timeout" from="SpawnTimer" to="." method="spawnEnemy"]
